Update Important Features

--- a/src/app/account/my-profile/my-profile.component.html
+++ b/src/app/account/my-profile/my-profile.component.html
@@ -14,10 +14,10 @@
       <p>Gender :</p>
     </div>
     <div class="text-gray-1200 flex flex-col gap-8">
-      <p>Jonathon Smith</p>
-      <p>jhonathonsmith&commat;gmail.com</p>
+      <p>{{ name }}</p>
+      <p>{{ email }}</p>
       <p>+880125412624</p>
-      <p>Male</p>
+      <p>{{ gender }}</p>
     </div>
   </div>
 </div>
