--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -19,7 +19,7 @@
   </a>
 </div>
 
-<div class="max-w-lg mx-auto bg-white p-8 shadow-xl rounded-lg mt-20 mb-20">
+<div class="max-w-lg mx-auto bg-white p-8 shadow-lg rounded-lg mt-20 mb-20">
   <h1 class="text-fs-md-title font-semibold mb-2 text-gray-1800">
     Create Your Account
   </h1>
@@ -27,7 +27,7 @@
     Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
     incididunt ut labore.
   </p>
-  <div class="max-w-lg mx-auto bg-white p-8 shadow-md rounded-lg">
+  <div class="max-w-lg mx-auto bg-white p-8 rounded-lg">
     <form (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="space-y-4">
       <!-- Name -->
       <div class="mb-4">
@@ -311,7 +311,7 @@
           >Confirm Password</label
         >
         <input
-          [type]="!showPassword ? 'password' : 'text'"
+          [type]="!showConfirmPassword ? 'password' : 'text'"
           id="confirm-password"
           formControlName="confirmPassword"
           class="w-full px-3 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
