--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -58,7 +58,7 @@
     >
   </div>
   <div
-    *ngIf="isEmpty()"
+    *ngIf="!isLoggedIn()"
     class="hidden sm:flex flex-col items-center sm:flex-row gap-2 sm:gap-3"
   >
     <a
@@ -72,16 +72,16 @@
       >Register Now</a
     >
   </div>
-  <!-- class="w-[241px] h-[382px]" -->
+
   <div
     (click)="toggleUserSettings()"
-    *ngIf="isEmpty()"
+    *ngIf="isLoggedIn()"
     class="font-semibold text-gray-1600 flex items-center gap-3 cursor-pointer relative"
   >
     <p
       class="text-fs-xs-title bg-gray-500 rounded-full p-6 w-[24px] h-[24px] flex justify-center items-center"
     >
-      {{ "Y" }}{{ lastName }}
+      {{ firstName }}{{ lastName }}
     </p>
     <p class="text-fs-p">{{ currentUser?.username }}</p>
     <svg
