--- a/src/app/account/my-account/my-account.component.html
+++ b/src/app/account/my-account/my-account.component.html
@@ -1,7 +1,7 @@
 <div class="my-account">
   <div class="background"></div>
   <div class="pt-28 px-20">
-    <h3 class="text-fs-md-title sm:text-fs-h3 gray-1800 pb-1">My Account</h3>
+    <h3 class="text-fs-sm-title sm:text-fs-h3 gray-1800 pb-1">My Account</h3>
     <ul class="flex space-x-4">
       <li>
         <a routerLink="/" class="hover:text-primary-500 font-medium">Home</a>
