--- a/src/app/account/payments-history/payments-history.component.html
+++ b/src/app/account/payments-history/payments-history.component.html
@@ -6,7 +6,7 @@
     >
       <p>Account Number: 6785 4987 6543</p>
       <svg
-        (click)="copyToCliboard('Text Copied')"
+        (click)="copyToCliboard()"
         width="26px"
         height="26px"
         viewBox="0 0 24 24"
