--- a/src/app/account/transfer-money/transfer-money.component.html
+++ b/src/app/account/transfer-money/transfer-money.component.html
@@ -10,7 +10,9 @@
   <div class="Money_transfer">
     <div class="background"></div>
     <div class="pt-28 px-20 warp">
-      <h3 class="text-fs-h3 gray-1800 pb-1">Money Transfer</h3>
+      <h3 class="text-fs-sm-title sm:text-fs-h3 gray-1800 pb-1">
+        Money Transfer
+      </h3>
       <ul class="warp flex space-x-4">
         <li>
           <a [routerLink]="['/']" class="hover:text-primary-500 font-medium"
@@ -22,7 +24,7 @@
         </li>
       </ul>
     </div>
-    <div class="flex items-center ml-auto p-20">
+    <div class="hidden sm:flex items-center ml-auto p-20">
       <svg
         width="251"
         height="236"
