--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -222,7 +222,7 @@
           viewBox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          class="absolute right-2 top-8 sm:right-4 sm:top-10 cursor-pointer"
+          class="absolute right-2 top-[2.5rem] sm:right-4 sm:top-10 cursor-pointer"
         >
           <path
             d="M15.58 12C15.58 13.98 13.98 15.58 12 15.58C10.02 15.58 8.42 13.98 8.42 12C8.42 10.02 10.02 8.41998 12 8.41998C13.98 8.41998 15.58 10.02 15.58 12Z"
@@ -248,7 +248,7 @@
           viewBox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          class="absolute right-2 top-8 sm:right-4 sm:top-10 cursor-pointer"
+          class="absolute right-2 top-[2.5rem] sm:right-4 sm:top-10 cursor-pointer"
         >
           <path
             d="M14.53 9.46998L9.47 14.53C8.82 13.88 8.42 12.99 8.42 12C8.42 10.02 10.02 8.41998 12 8.41998C12.99 8.41998 13.88 8.81998 14.53 9.46998Z"
@@ -333,7 +333,7 @@
           viewBox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          class="absolute right-2 top-8 sm:right-4 sm:top-10 cursor-pointer"
+          class="absolute right-2 top-[2.5rem] sm:right-4 sm:top-10 cursor-pointer"
         >
           <path
             d="M15.58 12C15.58 13.98 13.98 15.58 12 15.58C10.02 15.58 8.42 13.98 8.42 12C8.42 10.02 10.02 8.41998 12 8.41998C13.98 8.41998 15.58 10.02 15.58 12Z"
@@ -359,7 +359,7 @@
           viewBox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          class="absolute right-2 top-8 sm:right-4 sm:top-10 cursor-pointer"
+          class="absolute right-2 top-[2.5rem] sm:right-4 sm:top-10 cursor-pointer"
         >
           <path
             d="M14.53 9.46998L9.47 14.53C8.82 13.88 8.42 12.99 8.42 12C8.42 10.02 10.02 8.41998 12 8.41998C12.99 8.41998 13.88 8.81998 14.53 9.46998Z"
