--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -83,7 +83,7 @@
     >
       {{ firstName }}{{ lastName }}
     </p>
-    <p class="text-fs-p">{{ currentUser?.username }}</p>
+    <p class="text-fs-p">{{ userName }}</p>
     <svg
       width="24"
       height="24"
