Update Transfer Money

--- a/src/app/account/transfer-money/transfer-money.component.html
+++ b/src/app/account/transfer-money/transfer-money.component.html
@@ -1313,7 +1313,7 @@
       <button
         class="p-4 rounded-md shadow-md flex items-center space-x-4 w-[585px] bg-primary-500 text-white text-fs-body mx-auto mb-3"
         style="display: block"
-        (click)="goToNextStep()"
+        (click)="confirmTransfer()"
       >
         Confirm
       </button>
